--- a/index.html
+++ b/index.html
@@ -99,10 +99,14 @@
                                 alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/Sign In Page.png" width="150px" height="200px" alt="Second slide">
+                            <img class="d-block w-100" src="images/IMG_0086.JPG" width="150px" height="200px" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/IMG_0082.JPG" width="150px" height="200px" alt="Third slide">
+                            <img class="d-block w-100" src="images/IMG_0085.JPG" width="150px" height="200px" alt="Third slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/IMG_0082.JPG" width="250px" height="200px" alt="Fourth slide"
+                                id="needsrotate">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
