added resume to portfolio

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <header>
             <div class="row">
                 <div class="col-md-4" id="Resume">
-                    <center><a href="#" target="_blank">My Resume (N/A)</a></center>
+                    <center><a href="#" target="https://docs.google.com/document/d/114AvULdGCEvMrQ_oISu-5mMpEZ_BzLzNnp7RrcEBEKE/">My
+                            Resume</a></center>
                 </div>
                 <div class="col-md-4">
                     <center>
