--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header>
             <div class="row">
                 <div class="col-md-4" id="Resume">
-                    <center><a href="#" target="https://docs.google.com/document/d/114AvULdGCEvMrQ_oISu-5mMpEZ_BzLzNnp7RrcEBEKE/">My
+                    <center><a href="#" target="https://docs.google.com/document/d/114AvULdGCEvMrQ_oISu-5mMpEZ_BzLzNnp7RrcEBEKE/edit?usp=sharing">My
                             Resume</a></center>
                 </div>
                 <div class="col-md-4">
