messed up the href link but it should work now

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     </video>
     <div class="container">
 
-
         <header>
             <div class="row">
                 <div class="col-md-4" id="Resume">
-                    <center><a href="#" target="https://docs.google.com/document/d/114AvULdGCEvMrQ_oISu-5mMpEZ_BzLzNnp7RrcEBEKE/edit?usp=sharing">My
+                    <center><a href="https://docs.google.com/document/d/114AvULdGCEvMrQ_oISu-5mMpEZ_BzLzNnp7RrcEBEKE/edit?usp=sharing"
+                            target="_blank">My
                             Resume</a></center>
                 </div>
                 <div class="col-md-4">
